Fix mistakes after merge from master.